added service name filter for SumSubscriptions
