# docs/swagger.json
@@ -102,6 +102,12 @@
                         "name": "to",
                         "in": "query",
                         "required": true
+                    },
+                    {
+                        "type": "string",
+                        "description": "Название сервиса",
+                        "name": "service_name",
+                        "in": "query"
                     }
                 ],
                 "responses": {
